@@ -35,7 +35,7 @@ static int affichetrace = 0 ;
 
 attname	[a-zA-Z0-9_\-:.]+
 
-attvalue1	[%\*,;@a-zA-Z0-9_\-.:" "\"\'/\\\(\)\+\x41-\xff?&=]+
+attvalue1	[%\*,;@a-zA-Z0-9_\-.:" "\"\'/\\\(\)\+\x41-\xff?&=\!$]+
 
 whitesp                      [ ]
 newline                 [\r\n]|[\n]
